fixed dark mode

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -52,7 +52,7 @@ body.dark {
     --color-heading: #DFDFDE;
     --color-heading-black: #EDEDED;
     --color-accent: #d1dce5;
-    --image: url("../../images/moon.svg");
+    // --image: url("../../images/moon.svg");
 }
 
 /* 4 */
@@ -64,5 +64,5 @@ body.light {
     --color-heading-black: black;
     --color-accent: #d1dce5;
     --color-background: #FFFFFF;
-    --image: url("../../images/sun.svg");
+    // --image: url("../../images/sun.svg");
 }
